# orbital-mission-compiler

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
contracts/: __init__.py  communication.py  monitor.py  packaging.py  security.py  simulation.py  storage.py
docs/: 00_transcript_grounding.md  01_problem_framing.md  02_tech_landscape_2026_04.md  03_tooling_matrix.md  04_architecture.md  05_breakthrough_direction.md  06_execution_plan.md  07_installation_matrix.md  08_risks_and_unknowns.md  09_validation_checklist.md  10_agents_and_mcp.md  11_research_log.md  12_phase2_local_demo.md  13_market_positioning.md  14_strategic_analysis.md  14_traceability_matrix.md  15_threat_model.md  16_comparison_table.md  transcript_grounding.md
paper/: experiment-gpu-real.txt
scripts/: ablation_study.py  argo_smoke.sh  benchmark_scaling.py  bootstrap_local.sh  demo_phase2.sh  install_argo.sh  install_k3s.sh  install_kueue.sh  kueue_demo_apply.sh  kueue_integration_smoke.sh  opa_smoke.sh  render_demo_samples.sh  run_eval.sh  validate_live_cluster.sh  verify.py
tests/: test_ablation.py  test_benchmark.py  test_benchmark_cli.py  test_ci.py  test_cli.py  test_cli_functions.py  test_compiler.py  test_compiler_logging.py  test_compiler_summary.py  test_contracts_packaging.py  test_contracts_platform.py  test_contracts_simulation.py  test_docker.py  test_docs_and_ci_consistency.py  test_ir.py  test_kueue.py  test_kueue_dra.py  test_live_validation.py  test_manifests_cleanup.py  (+16 more)
(+58 files in other folders)
